# zenav1-svt

./: .gitignore  .gitmodules  .workongoing  CHANGELOG.md  CMakeLists.txt  LICENSE-COMMERCIAL  PORTING.md  README.md
.github/workflows/: mirror-svt-av1.yml  rust-gates.yml  svtav1-rs-gates.yml
Source/API/: EbDebugMacros.h  EbSvtAv1.h  EbSvtAv1Enc.h
Source/App/: app_config.c  app_main.c  app_process_cmd.c
rust/: .gitignore  CLAUDE.md  Cargo.toml  DEFER.md  README.md  STATUS.md
rust/benchmarks/: bd10_photo_p0p3_2026-07-23.tsv  coverage_combos_latest.tsv  exchange_sort_retest_2026-07-23.tsv  identity_matrix_nzmap.tsv  imazen26_sweep_2026-07-23.tsv  imazen26_sweep_2026-07-24_summary.tsv  perf_2026-07-20.raw.tsv  perf_2026-07-20.tsv  perf_alloc_2026-07-20.txt  perf_cs_after.raw.tsv  perf_cs_after.tsv  perf_cs_before.raw.tsv  perf_cs_before.tsv  perf_nzmap-after.raw.tsv  perf_nzmap-after.tsv  perf_nzmap-before-master.raw.tsv  perf_nzmap-before-master.tsv  perf_nzmap_ab_2026-07-23.raw.tsv  perf_nzmap_callgrind_2026-07-23.txt  perf_p6_4size.raw.tsv  perf_p6_4size.tsv  perf_p6_computestats_simd.raw.tsv  perf_p6_computestats_simd.tsv  perf_vs_c_2026-07-13_cdef.csv  perf_vs_c_2026-07-13_deblock.csv  photo_p0_bd8_sortfix_2026-07-23_after.tsv  photo_p0_bd8_sortfix_2026-07-23_before.tsv  photo_p0_bd8_sortfix_2026-07-23_final.tsv  real_image_identity_fix84_m2m5_2026-07-15.tsv  real_image_identity_fix85_m2m5.tsv  real_image_identity_m2m5_pd0tx4_2026-07-15.tsv  real_image_identity_p2p3-postfix.tsv  screen_ibc_map_2026-07-23.txt  screen_lowpreset_sweep_2026-07-23.txt  tile_map_latest.tsv  wider_corpus_2026-07-22_aggregate.tsv
rust/crates/svtav1-cref/: Cargo.toml  build.rs
rust/crates/svtav1-cref/shims/: ref_shims.c
rust/crates/svtav1-cref/src/: lib.rs
rust/crates/svtav1-dsp/: Cargo.toml
rust/crates/svtav1-dsp/examples/: perf_report.rs
rust/crates/svtav1-dsp/src/: cdef.rs  fwd_txfm.rs  hbd.rs  intra_pred.rs  inv_txfm.rs  lib.rs  obmc.rs  quant_coding.rs  quant_tables.rs  restoration.rs  txfm_simd.rs  txfm_simd_4dim.rs  txfm_simd_adst.rs  txfm_simd_drivers.rs  txfm_simd_ext.rs  txfm_simd_kernels.rs  txfm_simd_rect.rs
rust/crates/svtav1-dsp/tests/: c_parity_ac_bias.rs  c_parity_cdef.rs  c_parity_hadamard.rs  c_parity_hbd_distortion.rs  c_parity_intra_edge.rs  c_parity_scale.rs  c_parity_superres.rs  c_parity_txfm.rs  c_parity_wiener.rs  c_parity_wiener_hbd.rs
rust/crates/svtav1-encoder/: Cargo.toml
rust/crates/svtav1-encoder/src/: bd10.rs  bd10_qlookup_tables.rs  cdef.rs  chroma_q.rs  deblock.rs  depth_refine.rs  frame_geom.rs  hdr_mode.rs  intra_edge.rs  intrabc.rs  intrabc_hash.rs  intrabc_mvp.rs  intrabc_pred.rs  leaf_funnel.rs  lib.rs  motion_est.rs  multipass.rs  partition.rs  pd0.rs  pipeline.rs  qm.rs  quant.rs  restoration.rs  sb128_geom.rs  sb_qindex.rs  sc_detect.rs  speed_config.rs  temporal_filter.rs  tx_bias.rs  var_boost.rs  vartx.rs
rust/crates/svtav1-encoder/tests/: c_parity_intrabc.rs  c_parity_intrabc_hash.rs  c_parity_intrabc_mvp.rs  c_parity_intrabc_search.rs  c_parity_noise_gen.rs  c_parity_palette.rs  c_parity_quant.rs  c_parity_sb_qindex.rs  c_parity_sc_detect.rs  c_parity_ssim_md.rs  c_parity_var_boost.rs  lr_search_c_capture.rs
rust/crates/svtav1-entropy/: Cargo.toml
rust/crates/svtav1-entropy/src/: cdf.rs  coeff_c.rs  coeff_simd.rs  context.rs  default_cdfs.rs  lib.rs  mv_coding.rs  obu.rs  scan_tables.rs  writer.rs
rust/crates/svtav1-entropy/tests/: c_parity.rs  c_parity_mv.rs
rust/crates/svtav1-tables/: Cargo.toml
rust/crates/svtav1-types/: Cargo.toml
rust/crates/svtav1-types/src/: alloc_util.rs  error.rs  lib.rs
rust/docs/: ACCEPTANCE-CRITERIA.md  C-TEST-PORTING-AUDIT.md  HDR-ON-4.2.md  IDENTITY-STATUS.md  V4.2-AUDIT-AND-HDR-PLAN.md  bd10-port-map.md  coverage-combos-map.md  finishing-survey.md  ibc-port-map.md  palette-port-map.md  perf-status.md  practical-usage-plan.md  sb128-port-map.md
rust/docs/captures/: gradient_128x128_q20_p6.lrdbg.txt  gradient_128x128_q40_p6.m6fnl.txt  gradient_64x64_q20_p6.m6fnl.txt
rust/docs/captures/nsq_m2m3/: g64_q20_p3.nsq  g64_q40_p3.nsq  g64_q55_p2.nsq
rust/svtav1/: Cargo.toml
rust/svtav1/examples/: bench_vs_c.rs  cdef_evidence.rs  deblock_evidence.rs  decode_conformance.rs  identity_run.rs  perf_encode.rs  perf_vs_c.rs  probe_420.rs  recon_parity.rs  tune_gate.rs
rust/svtav1/src/: avif.rs
rust/svtav1/tests/: e2e_correctness.rs  thread_determinism.rs
rust/tools/: arbitrary_size_robustness.sh  bd10_classify.sh  bd10_nonflat_gate.sh  bd10_photo_gate.sh  bd10_recon_parity_gate.sh  bd10_screen_panic_gate.sh  coverage_combos_gate.sh  decode_conformance.sh  drill_cell.sh  extract_golden.c  extract_intra_golden.c  gen_txfm_simd.py  hdr_bd10_gate.sh  identity_diff.py  identity_diff.sh  identity_run  imazen26_gate.sh  imazen26_sweep.sh  perf_gate.sh  photo_p0_gate.sh  real_image_matrix.sh  recon_parity.sh  sb128_gate.sh  sb128_seqhdr.py  screen_ibc_fh_gate.sh  screen_ibc_gate.sh  screen_lowpreset_sweep.sh  screen_palette_gate.sh  tile_gate.sh  tile_map.sh  tree_diff.py  uvdc_join.py  wider_corpus_summary.sh  wider_corpus_sweep.sh
rust/tools/capture_c_trace/: build.sh  capture_c_trace  capture_c_trace.c  wrap_recon.c
rust/tools/decode_diff/: Cargo.toml
rust/tools/decode_diff/src/: main.rs
rust/tools/perf_c_encode/: build.sh  perf_c_encode.c
svtav1-rs/: .gitignore  CLAUDE.md  COVERAGE.md  Cargo.toml  README.md  STATUS.md  justfile
svtav1-rs/benchmarks/: identity_matrix_132_2026-07-16.tsv  identity_matrix_132_full_2026-07-16.tsv  (+18 more)
svtav1-rs/svtav1/: Cargo.toml
svtav1-rs/svtav1/examples/: cdef_evidence.rs  deblock_evidence.rs  decode_conformance.rs  hdr_fork_smoke.rs  identity_run.rs  m5_chroma_repro.rs  noise_gate.rs  perf_vs_c.rs  probe_420.rs  recon_parity.rs  repro_sub8.rs  trace_one.rs
svtav1-rs/svtav1/src/: avif.rs
svtav1-rs/svtav1/tests/: e2e_correctness.rs  golden_parity.rs  hdr_fork_e2e.rs  real_encode.rs
svtav1-rs/tools/decode_diff/: Cargo.toml
svtav1-rs/tools/decode_diff/src/: main.rs
test/: Convolve2dSrPerfTest.cc  VmafTest.cc  convolve_test.cc
(+190 files in other folders)
