[workspace]
members = [
    "crates/svtav1-types",
    "crates/svtav1-tables",
    "crates/svtav1-dsp",
    "crates/svtav1-entropy",
    "crates/svtav1-encoder",
    "crates/svtav1-cref",
    "svtav1",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-only OR LicenseRef-Imazen-Commercial"
repository = "https://github.com/imazen/svtav1-rs"

[workspace.dependencies]
# Package names carry the `zenav1-svt-` prefix; each crate keeps a SHORT
# `[lib] name` (`svtav1_types`, ...) so interior `use svtav1_types::…` paths
# stay stable across the rename.
zenav1-svt-types = { path = "crates/svtav1-types" }
zenav1-svt-tables = { path = "crates/svtav1-tables" }
zenav1-svt-dsp = { path = "crates/svtav1-dsp" }
zenav1-svt-entropy = { path = "crates/svtav1-entropy" }
zenav1-svt-encoder = { path = "crates/svtav1-encoder" }

archmage = "0.9"
magetypes = "0.9"

# Iteration-time balance: opt-level 2 compiles markedly faster than opt-3
# while keeping the encode/decode gates and codec tests fast at runtime
# (the gates are entropy-walk + external-decoder bound, not raw-DSP bound,
# so opt-2 vs opt-3 is a wash at run time but a clear win at build time).
# Bit-exactness is unaffected: Rust does not auto-contract a*b+c into FMA
# without target-feature=+fma, so integer/float results are identical
# across opt-levels (identity matrix re-verified at opt-2). Dependencies
# stay at full opt (compiled once, rarely rebuilt).
[profile.release]
opt-level = 2

[profile.test]
opt-level = 2

[profile.test.package."*"]
opt-level = 3

[profile.release.package."*"]
opt-level = 3

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# DSP functions inherently need many parameters (src, stride, ref, stride, width, height, etc.)
too_many_arguments = "allow"
# Transform butterfly loops use index arithmetic matching C source exactly
needless_range_loop = "allow"
# OBU header tests use binary literals for readability
unusual_byte_groupings = "allow"
