[package]
name = "zenav1-svt"
version = "0.1.0"
description = "Safe Rust AV1 encoder — algorithm-for-algorithm port of SVT-AV1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "svtav1"

[dependencies]
zenav1-svt-types = { workspace = true, features = ["std"] }
zenav1-svt-tables = { workspace = true }
zenav1-svt-dsp = { workspace = true, features = ["std"] }
zenav1-svt-entropy = { workspace = true, features = ["std"] }
zenav1-svt-encoder = { workspace = true }

[dev-dependencies]
# PNG decode for the real-image identity harness (examples/identity_run.rs
# `file:<path.png>` content). Example-only — not linked into the library.
png = "0.18.1"

[lints]
workspace = true

[features]
default = ["std"]
std = []
unsafe_encoding = ["zenav1-svt-encoder/unsafe_encoding"]
# Per-symbol arithmetic-coder trace on stderr (identity harness:
# tools/identity_diff.sh diffs it against the wrapped C library's trace).
symtrace = ["zenav1-svt-entropy/symtrace"]
