[package]
name = "zenav1-svt-dsp"
version = "0.1.0"
description = "Transforms, prediction, filtering — SIMD hot path for SVT-AV1 Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "svtav1_dsp"

[dependencies]
zenav1-svt-types = { workspace = true }
zenav1-svt-tables = { workspace = true }
archmage = { workspace = true }
magetypes = { workspace = true }

[dev-dependencies]
archmage = { workspace = true, features = ["testable_dispatch"] }
zenav1-svt-cref = { path = "../svtav1-cref" }

[lints]
workspace = true

[features]
default = []
std = ["zenav1-svt-types/std"]
unchecked_dsp = []
