[package]
name = "zenav1-svt-encoder"
version = "0.1.0"
description = "Mode decision, rate control, encoding loop, and pipeline for SVT-AV1 Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "svtav1_encoder"

[dependencies]
zenav1-svt-types = { workspace = true, features = ["std"] }
zenav1-svt-tables = { workspace = true }
zenav1-svt-dsp = { workspace = true, features = ["std"] }
zenav1-svt-entropy = { workspace = true, features = ["std"] }
# Feature 1: cooperative cancellation (`Stop` trait + no-op `Unstoppable` +
# type-erased `StopToken`). Feature 2: error-location tracing (`at!`).
enough = { workspace = true }
almost-enough = { workspace = true }
whereat = { workspace = true }

[dev-dependencies]
zenav1-svt-cref = { path = "../svtav1-cref" }

[lints]
workspace = true

[features]
default = ["std"]
std = []
unsafe_encoding = ["zenav1-svt-dsp/unchecked_dsp", "zenav1-svt-entropy/unchecked_entropy"]
# Feature 3: forward fallible allocation to svtav1-types (parallels the
# unconditional std forwarding above).
fallible-alloc = ["zenav1-svt-types/fallible-alloc"]
