[package]
name = "zenav1-svt-entropy"
version = "0.1.0"
description = "Arithmetic coder, CDF tables, and context models for SVT-AV1 Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "svtav1_entropy"

[dependencies]
zenav1-svt-types = { workspace = true }
zenav1-svt-tables = { workspace = true }

[dev-dependencies]
zenav1-svt-cref = { path = "../svtav1-cref" }

[lints]
workspace = true

[features]
default = []
std = ["zenav1-svt-types/std"]
unchecked_entropy = []
# Prints every symbol written to stderr — for differential debugging against
# a gdb-instrumented reference decoder. Requires std.
symtrace = ["std"]
