[package]
name = "zenav1-svt-tables"
version = "0.1.0"
description = "Quantization matrices, scan orders, filter taps, and lookup tables for SVT-AV1 Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "svtav1_tables"

[dependencies]
zenav1-svt-types = { workspace = true }

[lints]
workspace = true

[features]
default = []
