[package]
name = "zenav1-svt-types"
version = "0.1.0"
description = "Core data structures, constants, and enums for SVT-AV1 Rust port"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "svtav1_types"

[dependencies]
# Feature 2: cancellation reason (in `EncodeError::Cancelled`) + error-location
# tracing (`At<EncodeError>`). Both no_std (this crate is no_std + alloc).
enough = { workspace = true }
whereat = { workspace = true }

[lints]
workspace = true

[features]
default = []
std = []
# Feature 3: switch `try_vec!` to fallible `try_reserve`-based allocation.
fallible-alloc = []
