[package]
name = "decode-diff"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone drill tool — NOT a workspace member (see [workspace] below):
# it pulls in the whole aom-decoder-rs dep graph, which the encoder
# workspace's test cycle must not pay for. Built on demand by
# tools/drill_cell.sh.
[workspace]

[dependencies]
# The aom-rs decoder (the ACTIVELY-GATED sibling port: Gate-1 byte-identity
# + golden MD5 across the AV1 conformance corpus, CI-wired) as the decode
# oracle. Supersedes the older /root/work/aom-decoder-rs, which silently
# desyncs on Wiener-active streams; aom-decode fails LOUDLY (Result) on
# anything it cannot decode instead of fabricating pixels.
aom-decode = { path = "/root/aom-rs/crates/aom-decode" }
